--- a/include/web/user/manageruser.html
+++ b/include/web/user/manageruser.html
@@ -128,7 +128,7 @@
 Biblioteca autônoma - IFPB
 </div>
     <div class="modal-content">
-      <a href="./user.html">
+      <a href="/user/user">
         <button class="confirm-btn" style="background-color: #dc3545;">Voltar</button>
       </a>
     </div>
@@ -138,7 +138,7 @@ Biblioteca autônoma - IFPB
     <div onclick="mostrarSecao('historico')">Meus Empréstimos</div>
     <div style="display:flex;justify-content:center;align-items:center;" onclick="mostrarSecao('doacoes')">
 			<div>Doações</div>
-      <a href="./postuser.html">
+      <a href="/user/postuser">
         <button class="confirm-btn" style="background-color: green;">Doar livro</button>
       </a>
 		</div>
