--- a/include/web/user/user.html
+++ b/include/web/user/user.html
@@ -231,8 +231,8 @@ Biblioteca autônoma - IFPB
 		<div class="menu-wrapper">
 			<button class="menu-button" id="toggleMenu">≡</button>
 			<div class="dropdown" id="dropdownMenu">
-				<a href="./manageruser.html">User</a>
-				<a href="../index.html">Sair</a>
+				<a href="/user/manageruser">User</a>
+				<a href="/">Sair</a>
 			</div>
 		</div>
   </header>
