--- a/include/web/admin/manageadmin.html
+++ b/include/web/admin/manageadmin.html
@@ -154,10 +154,10 @@ Biblioteca autônoma - IFPB
 </h1>
     <span>Admin: admin@gmail.com</span>
     <div class="mmodal-content" style="background-color:#19882c;">
-			<a href="./pageadmin.html">
+			<a href="/admin/pageadmin">
        <button class="confirm-btn" id="confirmDelete">Voltar</button>
 			</a>
-			<a href="./postadmin.html">
+			<a href="/admin/postadmin">
        <button class="confirm-btn" id="confirmDelete" style="background-color:green;">Adicionar livro</button>
 			</a>
     </div>
