--- a/include/web/admin/pageadmin.html
+++ b/include/web/admin/pageadmin.html
@@ -231,8 +231,8 @@ Biblioteca autônoma - IFPB
 		<div class="menu-wrapper">
 			<button class="menu-button" id="toggleMenu">≡</button>
 			<div class="dropdown" id="dropdownMenu">
-				<a href="./manageadmin.html">admin</a>
-				<a href="../index.html">Sair</a>
+				<a href="/admin/manageadmin">admin</a>
+				<a href="/">Sair</a>
 			</div>
 		</div>
   </header>
