--- a/include/web/index.html
+++ b/include/web/index.html
@@ -55,7 +55,7 @@
 		<h1 style="text-align: center;">IFPB</h1>
     <form id="loginForm" action="/login" method="POST">
       <label for="email">Usuário</label>
-      <input type="text" id="email" name="email" placeholder="Matricula" required>
+      <input type="text" id="email" name="matricula" placeholder="Matricula" required>
       <label for="senha">Senha</label>
       <input type="password" id="senha" name="senha" placeholder="********" required>
       <button type="submit">Entrar</button>
